--- a/index.html
+++ b/index.html
@@ -50,7 +50,29 @@
       </nav>
   </nav>
 
+<div style="text-align: center; font-size: 40px;">
+      <ul>Udonis Haslem
+<li>Born: June 9, 1980 (Age: 42)</li>
+<li>3x NBA Champ amd 2003-04 All-Rookie</li>
+<li>6-8, 235 lb</li>
+ <li> Born: June 9, 1980 (Age: 42-347d) in Miami, Florida </li>
+ <li>   College: Florida </li>
+   <li> High School: Miami Senior in Miami, Florida</li>
+   <li>Experience: 19 years</li>
+</ul>
 
+<p>The average NBA retirement age is approximately 34 years old</p>
+
+
+
+
+
+
+
+
+
+
+</div>
 
 
 
