--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">What would happen if thwy win the finals</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="jimmy.html">Jimny Butler is Him</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="other.html">The others</a>
+                <a class="nav-link" href="other.html">The Team</a>
               </li>
         
             </ul>
@@ -51,21 +51,22 @@
   </nav>
 
 <div style="text-align: center; font-size: 40px;">
-      <ul>Udonis Haslem
-<li>Born: June 9, 1980 (Age: 42)</li>
-<li>3x NBA Champ amd 2003-04 All-Rookie</li>
-<li>6-8, 235 lb</li>
- <li> Born: June 9, 1980 (Age: 42-347d) in Miami, Florida </li>
- <li>   College: Florida </li>
-   <li> High School: Miami Senior in Miami, Florida</li>
-   <li>Experience: 19 years</li>
-</ul>
-
-<p>The average NBA retirement age is approximately 34 years old</p>
 
 
+<h1>The "prize" for winning the NBA Finals  </h1>
+<br>
+<h2> The franchise </h2>
 
+<P> Well There is no "prize" from the league, however. The franchise value likely goes up 
+  ,but there's no direct connection there. Per Forbes, the value of the Warriors has increased dramatically since their first championship - although all teams have increased significantly, 
+  the Warriors' increase was significantly more than other teams over a similar time period (the Warriors are about 10x as valuable now as in 2013, while the Knicks are about 5x, the Bulls are about 4.5x, etc.).</P>
 
+  <br>
+  <br>
+<h2>The Players</h2>
+
+<p> Well the prize for the players is a ring on there finger and maybe a finals mvp trophy, But it goes deeper then Jut that. Winning the NBA Finals could help you make the HOF (Hall of fame). 
+  There are about 178 players in the NBA HOF, a little over 70 of the Hall of Fame players have been able to win at least one championship in the NBA. That leaves over 100 Hall of Fame players without an NBA ring.</p>
 
 
 
