--- a/jimmy.html
+++ b/jimmy.html
@@ -16,7 +16,7 @@
 
 </head> 
 
-<body> 
+<body style="background-color: 	#F9A01B;"> 
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -26,40 +26,46 @@
 
 
 <nav class="navbar" style="background-color: red;">
-   <!-- Navbar content -->
-   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-       <div class="container-fluid">
-         <a class="navbar-brand" href="#">Navbar</a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-           <ul class="navbar-nav">
-             <li class="nav-item">
-               <a class="nav-link active" aria-current="page" href="index.html">What would happen if thwy win the finals</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="jimmy.html">Jimny Butler is Him</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="other.html">The others</a>
-             </li>
-       
-           </ul>
-         </div>
-       </div>
-     </nav>
- </nav>
+    <!-- Navbar content -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="jimmy.html">Jimny Butler is Him</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="other.html">The Team</a>
+              </li>
+        
+            </ul>
+          </div>
+        </div>
+      </nav>
+  </nav>
+  <div style="text-align: center; font-size: 40px;">
+
+  <h1>The Phenomenon Known as Jimmy Buckets</h1>
+
+
+  <h1 style="font-weight: bold;">Stats</h1>
+<p>Jimmy's regular season stats were 22.9 Points per game 5.9 Rebounds per game 5.3 Assists per game.
+  17.6 Points per game 5.3 Rebounds per game 4.1 Assists per game are his careers averages.
+  Jimmy Butler has averaged 29.9 points, 6.7 rebounds and 5.6 assists in 13 games in the 2023 playoffs.
+  He is averaging about 30 ppg (points per game) in the playoffs which is crazy. There is only about one other player in the whole playoffs thats averaging 30+ ppg and that Jayson Tatum
+</p>
 
 
 
-
-
-
-
-
-
-
+<img src="image/jimmy.png">
+</div>
 
 
 
