--- a/other.html
+++ b/other.html
@@ -16,43 +16,85 @@
 
 </head> 
 
-<body> 
+<body style="background-color: 	#F9A01B;">
 
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 
-
 <nav class="navbar" style="background-color: red;">
-   <!-- Navbar content -->
-   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-       <div class="container-fluid">
-         <a class="navbar-brand" href="#">Navbar</a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-           <ul class="navbar-nav">
-             <li class="nav-item">
-               <a class="nav-link active" aria-current="page" href="index.html">What would happen if thwy win the finals</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="jimmy.html">Jimny Butler is Him</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="other.html">The others</a>
-             </li>
-       
-           </ul>
-         </div>
-       </div>
-     </nav>
- </nav>
+  <!-- Navbar content -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="jimmy.html">Jimny Butler is Him</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="other.html">The Team</a>
+            </li>
+      
+          </ul>
+        </div>
+      </div>
+    </nav>
+</nav>
 
 
 
 
+ <p>
+  
+NAME	                 POS	 AGE	    HT      	WT	     COLLEGE        	SALARY
+Bam Adebayo 13	         C   	25	  6' 9"	   255 lbs	   Kentucky     	$30,351,780
+
+Jimmy Butler 22 	       SF	  33	  6' 7"	   230 lbs	   Marquette	    $37,653,300
+
+Jamal Cain 8	           F	 24	   6' 7"	   191 lbs	   Oakland         ---
+
+Udonis Haslem 40	     PF	   42	   6' 8"	  235 lbs     Florida	        $1,836,090
+  
+Tyler Herro 14  	     PG	  23	   6' 5"	  195 lbs	     Kentucky	       $5,722,116
+
+Haywood Highsmith 24	 F	  26	   6' 4"	  220 lbs   	Wheeling Jesuit	 $1,752,638
+
+Nikola Jovic 5	       F   	19	   6' 10"  	205 lbs	       ---            	 $2,239,920
+
+Kevin Love 42	         PF  	34	   6' 8"	  251 lbs	       UCLA	         $3,114,138
+  
+Kyle Lowry 7	         PG	  37	   6' 0"	  196 lbs	      Villanova	     $28,333,334
+
+Caleb Martin 16	       SF	  27	   6' 5"	  205 lbs     	Nevada	       $6,479,000
+ 
+Victor Oladipo 4	     SG	  31	  6' 4"	    213 lbs	     Indiana	       $8,750,000
+
+Duncan Robinson 55	    F	  29  	6' 7"	    215 lbs     	Michigan	      $16,902,000
+
+Orlando Robinson 25	    C	  22	  7' 0"	    235 lbs	      Fresno State	     ---
+
+Max Strus 31	         SG  	27	  6' 5"	   215 lbs	     DePaul	           $1,815,677
+   
+Gabe Vincent 2	       PG	  26	  6' 3"	   200 lbs	    UC Santa Barbara	 $1,815,677
+
+Omer Yurtseven 77	      C	  24	 6' 11"	  275 lbs	     Georgetown	        $1,752,638
+
+Cody Zeller 44	        sC	30	  6' 11"	240 lbs	       Indiana	         $517,060
+
+
+</p>
+
+
+
+</div>
 
 
 
