--- a/jimmy.html
+++ b/jimmy.html
@@ -29,7 +29,7 @@
     <!-- Navbar content -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,10 +39,10 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="jimmy.html">Jimny Butler is Him</a>
+                <a class="nav-link active" href="jimmy.html">Jimny Butler is Him</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="other.html">The Team</a>
+                <a class="nav-link active" href="other.html">The Team</a>
               </li>
         
             </ul>
@@ -52,14 +52,20 @@
   </nav>
   <div style="text-align: center; font-size: 40px;">
 
-  <h1>The Phenomenon Known as Jimmy Buckets</h1>
+  <h1>The Phenomenon Known as Jimmy Buckets and/or Himmy Butler</h1>
 
 
-  <h1 style="font-weight: bold;">Stats</h1>
+
 <p>Jimmy's regular season stats were 22.9 Points per game 5.9 Rebounds per game 5.3 Assists per game.
   17.6 Points per game 5.3 Rebounds per game 4.1 Assists per game are his careers averages.
   Jimmy Butler has averaged 29.9 points, 6.7 rebounds and 5.6 assists in 13 games in the 2023 playoffs.
-  He is averaging about 30 ppg (points per game) in the playoffs which is crazy. There is only about one other player in the whole playoffs thats averaging 30+ ppg and that Jayson Tatum
+  He is averaging about 30 ppg (points per game) in the playoffs which is crazy. There is only about one other player in the whole playoffs thats averaging 30+ ppg and that Jayson Tatum.
+Further more Heat star Jimmy Butler lit up the basketball world with an electric 56-point night in Game 4 against the Bucks . 
+It set a Miami franchise record for most points in a playoff game and marks the fourth-most points in a postseason game in NBA history.
+If you dont know what I mean calling an athlete "him" essentially just a way of calling a player a star or a clutch performer. 
+In the words of The Sporting News' David Suggs, "To be 'Him' is to be a dominant figure, a blooming flower in a garden full of weeds.
+  It's a feeling of euphoric confidence, the type of disposition that only occurs when you leave your opposition cowering in fear." 
+
 </p>
 
 
