--- a/index.html
+++ b/index.html
@@ -23,33 +23,31 @@
 
 
 
-
 <nav class="navbar" style="background-color: red;">
-    <!-- Navbar content -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="jimmy.html">Jimny Butler is Him</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="other.html">The Team</a>
-              </li>
-        
-            </ul>
-          </div>
+  <!-- Navbar content -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+  
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="jimmy.html">Jimny Butler is Him</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="other.html">The Team</a>
+            </li>
+      
+          </ul>
         </div>
-      </nav>
-  </nav>
-
+      </div>
+    </nav>
+</nav>
 <div style="text-align: center; font-size: 40px;">
 
 
