--- a/other.html
+++ b/other.html
@@ -22,12 +22,11 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-
 <nav class="navbar" style="background-color: red;">
   <!-- Navbar content -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,10 +36,10 @@
               <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="jimmy.html">Jimny Butler is Him</a>
+              <a class="nav-link active" href="jimmy.html">Jimny Butler is Him</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="other.html">The Team</a>
+              <a class="nav-link active" href="other.html">The Team</a>
             </li>
       
           </ul>
@@ -52,45 +51,186 @@
 
 
 
- <p>
-  
-NAME	                 POS	 AGE	    HT      	WT	     COLLEGE        	SALARY
-Bam Adebayo 13	         C   	25	  6' 9"	   255 lbs	   Kentucky     	$30,351,780
-
-Jimmy Butler 22 	       SF	  33	  6' 7"	   230 lbs	   Marquette	    $37,653,300
-
-Jamal Cain 8	           F	 24	   6' 7"	   191 lbs	   Oakland         ---
-
-Udonis Haslem 40	     PF	   42	   6' 8"	  235 lbs     Florida	        $1,836,090
-  
-Tyler Herro 14  	     PG	  23	   6' 5"	  195 lbs	     Kentucky	       $5,722,116
-
-Haywood Highsmith 24	 F	  26	   6' 4"	  220 lbs   	Wheeling Jesuit	 $1,752,638
-
-Nikola Jovic 5	       F   	19	   6' 10"  	205 lbs	       ---            	 $2,239,920
-
-Kevin Love 42	         PF  	34	   6' 8"	  251 lbs	       UCLA	         $3,114,138
-  
-Kyle Lowry 7	         PG	  37	   6' 0"	  196 lbs	      Villanova	     $28,333,334
-
-Caleb Martin 16	       SF	  27	   6' 5"	  205 lbs     	Nevada	       $6,479,000
- 
-Victor Oladipo 4	     SG	  31	  6' 4"	    213 lbs	     Indiana	       $8,750,000
-
-Duncan Robinson 55	    F	  29  	6' 7"	    215 lbs     	Michigan	      $16,902,000
-
-Orlando Robinson 25	    C	  22	  7' 0"	    235 lbs	      Fresno State	     ---
-
-Max Strus 31	         SG  	27	  6' 5"	   215 lbs	     DePaul	           $1,815,677
-   
-Gabe Vincent 2	       PG	  26	  6' 3"	   200 lbs	    UC Santa Barbara	 $1,815,677
-
-Omer Yurtseven 77	      C	  24	 6' 11"	  275 lbs	     Georgetown	        $1,752,638
-
-Cody Zeller 44	        sC	30	  6' 11"	240 lbs	       Indiana	         $517,060
 
 
-</p>
+
+
+
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">POS</th>
+      <th scope="col">AGE</th>
+      <th scope="col">HT</th>
+      <th scope="col">WT</th>
+      <th scope="col">COLLEGE</th>
+      <th scope="col">SALARY</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Bam Adebayo</td>
+      <td>C</td>
+      <td>25</td>
+      <td>6'9"</td>
+      <td>255 lbs </td>
+      <td>Kentucky</td>
+      <td>$30,351,780</td>
+    </tr>
+    <tr>
+      <td>Jimmy Butler</td>
+      <td>SF</td>
+      <td>33</td>
+      <td>6'7"</td>
+      <td>230 lbs </td>
+      <td>Marquette</td>
+      <td>$37,653,300</td>
+    </tr>
+    <tr>
+   <td>Jamal Cain</td>
+      <td>F</td>
+      <td>24</td>
+      <td>6'7"</td>
+      <td>191 lbs </td>
+      <td>Oakland</td>
+      <td>--</td>
+    </tr>
+    <tr>
+      <td>Udonis Haslem</td>
+      <td>PF</td>
+      <td>42</td>
+      <td>6'8"</td>
+      <td>235 lbs </td>
+      <td>Florida</td>
+      <td>$1,836,090</td>
+    </tr>
+    <tr>
+      <td>Tyler Herro</td>
+      <td>PG</td>
+      <td>24</td>
+      <td>6'5"</td>
+      <td>195 lbs </td>
+      <td>Kentucky</td>
+      <td>$5,722,116</td>
+    </tr>
+    <tr>
+      <td>Haywood Highsmith</td>
+      <td>F</td>
+      <td>26</td>
+      <td>6'4"</td>
+      <td>220 lbs </td>
+      <td>Wheeling Jesuit</td>
+      <td>$1,752,638</td>
+    </tr>
+    <tr>
+      <td>Nikola Jovic</td>
+      <td>F</td>
+      <td>19</td>
+      <td>6'10"</td>
+      <td>205 lbs </td>
+      <td>--</td>
+      <td>$2,239,920</td>
+    </tr>
+    <tr>
+      <td>Kevin Love</td>
+      <td>PF</td>
+      <td>34</td>
+      <td>6'8"</td>
+      <td>251 lbs </td>
+      <td>UCLA</td>
+      <td>$30,351,780</td>
+    </tr>
+    <tr>
+      <td>Kyle Lowry</td>
+      <td>PG</td>
+      <td>37</td>
+      <td>6'0"</td>
+      <td>196 lbs </td>
+      <td>Villanova</td>
+      <td>$28,333,334</td>
+    </tr>
+    <tr>
+      <td>Caleb Martin</td>
+      <td>SF</td>
+      <td>27</td>
+      <td>6'5"</td>
+      <td>205 lbs </td>
+      <td>Nevada</td>
+      <td>$6,479,000</td>
+    </tr>
+    <tr>
+      <td>Victor Oladipo</td>
+      <td>SG</td>
+      <td>31</td>
+      <td>6'4"</td>
+      <td>213 lbs </td>
+      <td>Indiana</td>
+      <td>$8,750,000</td>
+    </tr>
+    <tr>
+      <td>Duncan Robinson</td>
+      <td>F</td>
+      <td>29</td>
+      <td>6'7"</td>
+      <td>215 lbs </td>
+      <td>Michigan</td>
+      <td>$16,902,000</td>
+    </tr>
+    <tr>
+      <td>Orlando Robinson</td>
+      <td>C</td>
+      <td>22</td>
+      <td>7'0"</td>
+      <td>235 lbs </td>
+      <td>Fresno State</td>
+      <td>--</td>
+    </tr>
+    <tr>
+      <td>Max Strus</td>
+      <td>SG</td>
+      <td>27</td>
+      <td>6'5"</td>
+      <td>215 lbs </td>
+      <td>DePaul</td>
+      <td>$1,815,677</td>
+    </tr>
+    <tr>
+      <td>Gabe Vincent</td>
+      <td>PG</td>
+      <td>26</td>
+      <td>6'3"</td>
+      <td>200 lbs </td>
+      <td>UC Santa Barbara</td>
+      <td>$1,815,677</td>
+    </tr>
+    <tr>
+      <td>Omer Yurtseven</td>
+      <td>C</td>
+      <td>24</td>
+      <td>6'11"</td>
+      <td>275 lbs </td>
+      <td>Georgetown</td>
+      <td>$1,752,638</td>
+    </tr>
+    <tr>
+      <td>Bam Adebayo</td>
+      <td>C</td>
+      <td>30</td>
+      <td>6'11"</td>
+      <td>240 lbs </td>
+      <td>Indiana</td>
+      <td>$517,060</td>
+    </tr>
+
+  </tbody>
+</table>
+
+
+
+
+
 
 
 
