--- a/other.html
+++ b/other.html
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="jimmy.html">Jimny Butler is Him</a>
+              <a class="nav-link active" href="jimmy.html">Jimmy Butler is Him</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="other.html">The Team</a>
@@ -215,13 +215,13 @@
       <td>$1,752,638</td>
     </tr>
     <tr>
-      <td>Bam Adebayo</td>
+      <td>Cody Zeller</td>
       <td>C</td>
       <td>30</td>
       <td>6'11"</td>
       <td>240 lbs </td>
       <td>Indiana</td>
-      <td>$517,060</td>
+      <td>$2,389,641</td>
     </tr>
 
   </tbody>
@@ -232,12 +232,10 @@
 
 
 
-
-
 </div>
-
-
-
+<div style="text-align: center;">
+<img src="image/th.png">
+</div>
 
 
 
