--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
 
 
+
 <nav class="navbar" style="background-color: red;">
   <!-- Navbar content -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-  
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +38,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="jimmy.html">Jimny Butler is Him</a>
+              <a class="nav-link active" href="jimmy.html">Jimmy Butler is Him</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="other.html">The Team</a>
@@ -48,6 +49,8 @@
       </div>
     </nav>
 </nav>
+
+
 <div style="text-align: center; font-size: 40px;">
 
 
