--- a/jimmy.html
+++ b/jimmy.html
@@ -25,31 +25,34 @@
 
 
 
-<nav class="navbar" style="background-color: red;">
-    <!-- Navbar content -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="jimmy.html">Jimny Butler is Him</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="other.html">The Team</a>
-              </li>
-        
-            </ul>
-          </div>
+<nav class="navbar" style="background-color: red;">
+  <!-- Navbar content -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="jimmy.html">Jimmy Butler is Him</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="other.html">The Team</a>
+            </li>
+      
+          </ul>
         </div>
-      </nav>
-  </nav>
+      </div>
+    </nav>
+</nav>
+
+
   <div style="text-align: center; font-size: 40px;">
 
   <h1>The Phenomenon Known as Jimmy Buckets and/or Himmy Butler</h1>
@@ -65,6 +68,10 @@ It set a Miami franchise record for most points in a playoff game and marks the 
 If you dont know what I mean calling an athlete "him" essentially just a way of calling a player a star or a clutch performer. 
 In the words of The Sporting News' David Suggs, "To be 'Him' is to be a dominant figure, a blooming flower in a garden full of weeds.
   It's a feeling of euphoric confidence, the type of disposition that only occurs when you leave your opposition cowering in fear." 
+  Now on Thursday, June 1, The Miami Heat are in the NBA finals. If they win the finals they will be the first every 8th seed to win the finals.
+  (Miami Heat (+300) vs. Denver Nuggets (-380))
+
+  
 
 </p>
 
