--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 
 
+
+
+<div style="font-size: larger;text-align: center;">
+
 <nav class="navbar" style="background-color: red;">
   <!-- Navbar content -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -34,6 +38,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
+         
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
             </li>
@@ -50,6 +55,8 @@
     </nav>
 </nav>
 
+
+</div>
 
 <div style="text-align: center; font-size: 40px;">
 
