--- a/index.html
+++ b/index.html
@@ -23,36 +23,25 @@
 
 
 
-
-
-
-<div style="font-size: larger;text-align: center;">
-
-<nav class="navbar" style="background-color: red;">
-  <!-- Navbar content -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-         
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="jimmy.html">Jimmy Butler is Him</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="other.html">The Team</a>
-            </li>
-      
-          </ul>
-        </div>
-      </div>
-    </nav>
+<div style="background-color: red">
+<nav class="navbar sticky-top navbar-light bg-light">
+  <div class="container-fluid">
+    <div class="navbar-brand" href="#" style="text-align: center;padding-left: 0%;">
+ <divi class="nav-item">
+      <a class="nav-link active" aria-current="page" href="index.html">Why is It important to Win</a>
+    </div>
+ 
+    <div class="nav-item">
+      <a class="nav-link active" href="jimmy.html">Jimmy Butler is Him</a>
+    </div>
+ 
+    <div class="nav-item">
+      <a class="nav-link active" href="other.html">The Team</a>
+  </div>
+   
+  </div>
+  </div>
+</div>
 </nav>
 
 
